static html and css done

--- a/index.html
+++ b/index.html
@@ -23,20 +23,88 @@
     </header>
     <div class="container">
         <img class="logo-mastercraft" src="images/logo-mastercraft.svg" alt="mastercraft">
-        <div class="introduction">
+        <div class="box">
             <h2><strong>Mastercraft Bamboo Monitor Riser</strong></h2>
             <p>A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
             <div class="buttons-container">
-                <button class="backProject btn">
+                <button type="button" class="backProjectBtn btn">
                     <strong>Back this project</strong>
                 </button>
-                <button class="bookmark btn">
+                <button type="button" class="bookmarkBtn btn">
                     <img class="bookmark-img" src="images/icon-bookmark.svg">
                     <strong>Bookmark</strong>
                 </button>
             </div>
         </div>
+        <div class="box">
+            <div class="analytics">
+                <span class="line">
+                    <h1>$89,914</h1>
+                    <p>of $100,000 backed</p>
+                </span>
+                <span class="line">
+                    <h1>5,007</h1>
+                    <p>total backers</p>
+                </span>
+                <span>
+                    <h1>56</h1>
+                    <p>days left</p>
+                </span>
+            </div>
+            
+            <div class="progress"></div>
+        </div>
+        <div class="box about">
+            <h3>About this project</h3>
+            <p>The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform that elevates your screen to a more comfortable viewing height. Placing your monitor at eye level has the potential to improve your posture and make you more comfortable while at work, helping you stay focused on the task at hand.</p>
+            <p>Featuring artisan craftsmanship, the simplicity of design creates extra desk space below your computer to allow notepads, pens, and USB sticks to be stored under the stand.</p>
+
+            <div class="box inDiv">
+                <div class="flex">
+                    <h3>Bamboo Stand</h3>
+                    <span>Pledge $25 or more</span>
+                </div>
+                <p>You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and you’ll be added to a special Backer member list.</p>
+                <div class="flex">
+                    <div class="flex">
+                        <h1>101</h1>
+                        <p>left</p>
+                    </div>
+                    <button type="button" class="selectBtn btn">Select Reward</button>
+                </div>
+            </div>
+            
+            <div class="box inDiv">
+                <div class="flex">
+                    <h3>Black Edition Stand</h3>
+                    <span>Pledge $75 or more</span>
+                </div>
+                <p>You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer member list. Shipping is included.</p>
+                <div class="flex">
+                    <div class="flex">
+                        <h1>64</h1>
+                        <p>left</p>
+                    </div>
+                    <button type="button" class="selectBtn btn">Select Reward</button>
+                </div>
+            </div>
+
+            <div class="box inDiv out">
+                <div class="flex">
+                    <h3>Mahogany Special Edition</h3>
+                    <span>Pledge $200 or more</span>
+                </div>
+                <p>You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added to our Backer member list. Shipping is included.</p>
+                <div class="flex">
+                    <div class="flex">
+                        <h1>0</h1>
+                        <p>left</p>
+                    </div>
+                    <button type="button" disabled class="outBtn btn">Out of stock</button>
+                </div>
+            </div>
+        </div>   
     </div>
-<img src="images/logo.svg">
+
 </body>
 </html>
