--- a/index.html
+++ b/index.html
@@ -7,19 +7,22 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <header>
         <div class="header">
             <img class="logo" src="images/logo.svg" alt="logo">
-            <ul>
+            <ul class="menu">
                 <li><a>About</a></li>
                 <li><a>Discover</a></li>
                 <li><a>GetStarted</a></li>
             </ul>
+            <div class="menu-mobile">
+                <img src="./images/icon-hamburger.svg" />
+            </div>
         </div>
-        <img src="images/image-hero-desktop.jpg">
+        <!-- <img src="images/image-hero-desktop.jpg"> -->
     </header>
     <div class="container">
         <img class="logo-mastercraft" src="images/logo-mastercraft.svg" alt="mastercraft">
@@ -33,6 +36,9 @@
                 <button type="button" class="bookmarkBtn btn">
                     <img class="bookmark-img" src="images/icon-bookmark.svg">
                     <strong>Bookmark</strong>
+                </button>
+                <button type="button" class="bookmarkBtn-mobile btn">
+                    <img class="bookmark-img" src="images/icon-bookmark.svg">
                 </button>
             </div>
         </div>
@@ -66,7 +72,7 @@
                 </div>
                 <p>You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and you’ll be added to a special Backer member list.</p>
                 <div class="flex">
-                    <div class="flex">
+                    <div class="flex2">
                         <h1>101</h1>
                         <p>left</p>
                     </div>
@@ -81,7 +87,7 @@
                 </div>
                 <p>You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer member list. Shipping is included.</p>
                 <div class="flex">
-                    <div class="flex">
+                    <div class="flex2">
                         <h1>64</h1>
                         <p>left</p>
                     </div>
@@ -96,7 +102,7 @@
                 </div>
                 <p>You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added to our Backer member list. Shipping is included.</p>
                 <div class="flex">
-                    <div class="flex">
+                    <div class="flex2">
                         <h1>0</h1>
                         <p>left</p>
                     </div>
