--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <strong>Back this project</strong>
                 </button>
                 <button type="button" class="bookmarkBtn btn">
-                    <img class="bookmark-img" src="images/icon-bookmark.svg">
+                    <img fill="#fff" class="bookmark-img" src="images/icon-bookmark.svg">
                     <strong>Bookmark</strong>
                 </button>
                 <button type="button" class="bookmarkBtn-mobile btn">
