footer e readme adicionados

--- a/index.html
+++ b/index.html
@@ -114,7 +114,12 @@
                 </div>
             </div>
         </div> 
+        <footer>
+            <p><a href="https://www.linkedin.com/in/luiza-de-almeida-campos/" target="_blank">Desenvolvido por Luiza Campos</a></p>
+        </footer>
     </div>
+
+   
         
     <!-- Modais -->
         <div class="modalBackThisProject">
